# FirefoxReaderWebService

./: CHANGELOG.md  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
reader_web_service/: __init__.py  __main__.py  read_by_firefox.py
