[tool.poetry]
name = "reader-web-service"
version = "0.1.0"
description = ""
authors = ["Alexo <alexo@live.ru>"]
readme = "README.md"
packages = [{include = "reader_web_service"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
