[tool.poetry]
name = "reader-web-service"
version = "0.1.0"
description = ""
authors = ["Alexo <alexo@live.ru>"]
readme = "README.md"
packages = [{include = "reader_web_service"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
selenium = "^4.22.0"
pyvirtualdisplay = "^3.0"
selenium-screenshot = "^2.1.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pyroscope-io = "^0.8.7"
notifiers = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
